--- a/Test MultiInput_LSTM/Code/multi_input_lstm.ipynb
+++ b/Test MultiInput_LSTM/Code/multi_input_lstm.ipynb
@@ -15,6 +15,10 @@
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "from lumibot.backtesting import YahooDataBacktesting\n",
+    "from lumibot.brokers import Alpaca\n",
+    "from datetime import datetime\n",
+    "from backtesting import Backtest\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()"
@@ -24,6 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Helpful Notes\n",
     "- https://www.geeksforgeeks.org/how-to-use-pytorchs-nnmultiheadattention/\n",
     "- https://github.com/keras-team/tf-keras/issues/139"
    ]
@@ -55,11 +60,11 @@
     "input_size_f_and_g = 14\n",
     "input_size_commodities = 48\n",
     "output_zize = 1\n",
-    "hidden_size = 128\n",
+    "hidden_size = 1024\n",
     "num_layers = 1\n",
     "dropout = 0.1\n",
-    "embed_dim = 1024\n",
-    "num_heads = 16\n",
+    "embed_dim = 2048\n",
+    "num_heads = 512\n",
     "\n",
     "# Training Parameter\n",
     "batch_size = 1\n",
@@ -76,7 +81,9 @@
     "test_data_path_f_and_g = \"../Data/test_f_and_g.pkl\"\n",
     "test_data_path_news = \"../Data/test_news.pkl\"\n",
     "\n",
-    "model_path = \"../MOdels/best_model.pt\""
+    "model_path = \"../Models/best_model.pt\"\n",
+    "\n",
+    "backtest_name = \"Multi Input inkl stop_loss, cash at risk 1, take_profit, careful short, careful buy\""
    ]
   },
   {
@@ -115,28 +122,25 @@
     "        self.fc = nn.Linear(embed_dim, output_size)\n",
     "        \n",
     "    def forward(self, x_commodities, x_f_and_g, x_news):\n",
-    "        # Pass inputs through respective LSTMs and linear layers\n",
     "        out_commodities, _ = self.lstm_commodities(x_commodities)\n",
-    "        out_commodities = self.fc_commodities(out_commodities[:, -1, :])  # Last timestep output\n",
+    "        out_commodities = self.fc_commodities(out_commodities[:, -1, :]) \n",
     "        \n",
     "        out_f_and_g, _ = self.lstm_f_and_g(x_f_and_g)\n",
-    "        out_f_and_g = self.fc_f_and_g(out_f_and_g[:, -1, :])  # Last timestep output\n",
+    "        out_f_and_g = self.fc_f_and_g(out_f_and_g[:, -1, :])  \n",
     "        \n",
     "        out_news, _ = self.lstm_news(x_news)\n",
-    "        out_news = self.fc_news(out_news[:, -1, :])  # Last timestep output\n",
+    "        out_news = self.fc_news(out_news[:, -1, :])  \n",
     "        \n",
-    "        # Concatenate outputs for attention layer (embedding dimension: embed_dim*3)\n",
     "        combined = torch.cat([out_commodities.unsqueeze(1), \n",
     "                              out_f_and_g.unsqueeze(1), \n",
     "                              out_news.unsqueeze(1)], dim=1)\n",
-    "        # Now combined has shape [batch_size, 3, embed_dim] (batch_size, 3 branches, embed_dim)\n",
     "\n",
     "        # Apply attention mechanism\n",
     "        attn_output, attn_weights = self.attn(combined, combined, combined)\n",
     "        \n",
     "        # Normalize and pass through the final output layer\n",
     "        attn_output = self.norm1(attn_output)\n",
-    "        output = self.fc(attn_output.mean(dim=1))  # Aggregate along sequence length (dim=0)\n",
+    "        output = self.fc(attn_output.mean(dim=1))  \n",
     "\n",
     "        # For plotting during training: store attention weights (optional)\n",
     "        return output, attn_weights\n"
@@ -212,7 +216,7 @@
     "\n",
     "## Commodities and Y\n",
     "\n",
-    "com_inputs = com.iloc[:, 1:-1]  # Exclude \"Date\" and target column\n",
+    "com_inputs = com.iloc[:, 1:-1]\n",
     "scaler_com = MinMaxScaler()\n",
     "scaler_y = MinMaxScaler()\n",
     "scaled_com_inputs = scaler_com.fit_transform(com_inputs.values)\n",
@@ -220,13 +224,13 @@
     "\n",
     "## Fear and Greed\n",
     "\n",
-    "fg_inputs = fg.iloc[:, 1:-1]  # Exclude \"Date\" and target column\n",
+    "fg_inputs = fg.iloc[:, 1:-1]  \n",
     "scaler_fg = MinMaxScaler()\n",
     "scaled_fg_inputs = scaler_fg.fit_transform(fg_inputs.values)\n",
     "\n",
     "## News\n",
     "\n",
-    "news_inputs = news.iloc[:, 1:-1]  # Exclude \"Date\" and target column\n",
+    "news_inputs = news.iloc[:, 1:-1] \n",
     "scaler_news = MinMaxScaler()\n",
     "scaled_news_inputs = scaler_news.fit_transform(news_inputs.values)\n",
     "\n",
@@ -316,7 +320,9 @@
     "    num_heads=num_heads,\n",
     ")\n",
     "criterion = nn.MSELoss()\n",
-    "optimizer = optim.Adam(net.parameters(), lr=learning_rate)"
+    "optimizer = optim.Adam(net.parameters(), lr=learning_rate)\n",
+    "\n",
+    "net.to(device)"
    ]
   },
   {
@@ -336,6 +342,7 @@
     "# Early stopping and best model saving parameters\n",
     "patience = 8\n",
     "best_test_loss = float('inf')\n",
+    "best_train_loss = float('inf')\n",
     "early_stopping_counter = 0\n",
     "\n",
     "# Loss tracking\n",
@@ -369,11 +376,10 @@
     "        \n",
     "        # Update metrics\n",
     "        epoch_train_loss += loss.item()\n",
-    "        # Average attention weights over all heads and sequence dimensions\n",
-    "        epoch_attn_commodities.append(attn_weights[0].item())  # First input (commodities)\n",
-    "        epoch_attn_fg.append(attn_weights[1].item())           # Second input (fear & greed)\n",
-    "        epoch_attn_news.append(attn_weights[2].item())          # News attention\n",
-    "    # Average losses and attention weights for the epoch\n",
+    "        epoch_attn_commodities.append(attn_weights[0].item())  \n",
+    "        epoch_attn_fg.append(attn_weights[1].item())           \n",
+    "        epoch_attn_news.append(attn_weights[2].item())         \n",
+    "\n",
     "    avg_train_loss = epoch_train_loss / len(train_loader)\n",
     "    train_losses.append(avg_train_loss)\n",
     "    attention_tracker['commodities'].append(np.mean(epoch_attn_commodities))\n",
@@ -401,6 +407,7 @@
     "    # Save the best model\n",
     "    if avg_test_loss < best_test_loss:\n",
     "        best_test_loss = avg_test_loss\n",
+    "        best_train_loss = avg_train_loss\n",
     "        best_epoch = epoch\n",
     "        torch.save(net.state_dict(), model_path)\n",
     "        print(f\"Best model saved at epoch {epoch + 1} with Test Loss: {best_test_loss:.4f}\")\n",
@@ -441,8 +448,9 @@
     "\n",
     "# Final Summary\n",
     "print(f\"Training completed. Best model saved to {model_path}\")\n",
-    "print(f\"Best Test Loss: {best_test_loss:.4f} at epoch {best_epoch + 1}\")\n",
-    "print(f\"Final Training Loss: {train_losses[-1]:.4f}, Final Test Loss: {test_losses[-1]:.4f}\")"
+    "print(f\"Best Test Loss: {best_test_loss} at epoch {best_epoch + 1}\")\n",
+    "print(f\"Best Train Loss: {best_train_loss} at epoch {best_epoch + 1}\")\n",
+    "print(f\"Final Training Loss: {train_losses[-1]}, Final Test Loss: {test_losses[-1]}\")"
    ]
   },
   {
@@ -557,6 +565,119 @@
     "\n",
     "test_loader = DataLoader(dataset, batch_size=batch_size)\n",
     "results = run_backtest(model_path, seq_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs(\"logs\", exist_ok=True)\n",
+    "os.makedirs(\"results\", exist_ok=True)\n",
+    "\n",
+    "# Training\n",
+    "com = pd.read_pickle(train_data_path_commodities) \n",
+    "com[\"Date\"] = pd.to_datetime(com[\"Date\"])\n",
+    "\n",
+    "fg = pd.read_pickle(train_data_path_f_and_g)\n",
+    "fg[\"Date\"] = pd.to_datetime(fg[\"Date\"])\n",
+    "\n",
+    "news = pd.read_pickle(train_data_path_news)  \n",
+    "news[\"Date\"] = pd.to_datetime(news[\"Date\"])\n",
+    "\n",
+    "# Find the common dates across all datasets\n",
+    "common_dates = set(com[\"Date\"]).intersection(set(fg[\"Date\"])).intersection(set(news[\"Date\"]))\n",
+    "\n",
+    "# Filter each dataset to include only rows with the common dates\n",
+    "com = com[com[\"Date\"].isin(common_dates)]\n",
+    "fg = fg[fg[\"Date\"].isin(common_dates)]\n",
+    "news = news[news[\"Date\"].isin(common_dates)]\n",
+    "\n",
+    "scaler_com = MinMaxScaler()\n",
+    "scaler_com.fit(com.iloc[:, 1:-1].values)\n",
+    "scaler_fg = MinMaxScaler()\n",
+    "scaler_fg.fit(fg.iloc[:, 1:-1].values)\n",
+    "scaler_news = MinMaxScaler()\n",
+    "scaler_news.fit(news.iloc[:, 1:-1].values)\n",
+    "scaler_y = MinMaxScaler()\n",
+    "scaler_y.fit(com.iloc[:, -1].values.reshape(-1, 1))\n",
+    "\n",
+    "test_data_commodities = pd.read_pickle(test_data_path_commodities)\n",
+    "test_data_fg = pd.read_pickle(test_data_path_f_and_g)\n",
+    "test_data_news = pd.read_pickle(test_data_path_news)\n",
+    "\n",
+    "model = Net(\n",
+    "    input_size_commodities=input_size_commodities,\n",
+    "    input_size_f_and_g=input_size_f_and_g,\n",
+    "    input_size_news=input_size_news,\n",
+    "    output_size=output_zize,\n",
+    "    hidden_size=hidden_size,\n",
+    "    embed_dim=embed_dim,\n",
+    "    num_layers=num_layers,\n",
+    "    dropout=dropout,\n",
+    "    num_heads=num_heads,\n",
+    ")\n",
+    "model.load_state_dict(torch.load(model_path))\n",
+    "model.eval()\n",
+    "\n",
+    "ALPACA_CREDS = {\n",
+    "    \"API_KEY\": os.getenv(\"ALPACA_API_KEY\"),\n",
+    "    \"API_SECRET\": os.getenv(\"ALPACA_API_SECRET\"),\n",
+    "    \"PAPER\": True,\n",
+    "}\n",
+    "\n",
+    "# Strategy setup\n",
+    "start_date = datetime(2023, 1, 1)\n",
+    "end_date = datetime(2023, 12, 31)\n",
+    "broker = Alpaca(ALPACA_CREDS)\n",
+    "\n",
+    "strategy = Backtest(\n",
+    "    name=backtest_name,\n",
+    "    broker=broker,\n",
+    "    parameters={\n",
+    "        \"symbol\": \"spy\",\n",
+    "        \"cash_at_risk\": 0.8,\n",
+    "        \"model\": model,\n",
+    "        \"num_prior_days\": 30,\n",
+    "        \"datase_com\": test_data_commodities,\n",
+    "        \"datase_fg\": test_data_fg,\n",
+    "        \"datase_news\": test_data_news,\n",
+    "        \"scaler_com\": scaler_com,\n",
+    "        \"scaler_fg\": scaler_fg,\n",
+    "        \"scaler_news\": scaler_news,\n",
+    "        \"scaler_y\": scaler_y,\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "# Run backtest\n",
+    "backtest_results = strategy.backtest(\n",
+    "    YahooDataBacktesting,\n",
+    "    start_date,\n",
+    "    end_date,\n",
+    "    name=backtest_name,\n",
+    "    parameters={\n",
+    "        \"symbol\": \"spy\",\n",
+    "        \"cash_at_risk\": 1,\n",
+    "        \"model\": model,\n",
+    "        \"num_prior_days\": 30,\n",
+    "        \"dataset_com\": test_data_commodities,\n",
+    "        \"dataset_fg\": test_data_fg,\n",
+    "        \"dataset_news\": test_data_news,\n",
+    "        \"scaler_com\": scaler_com,\n",
+    "        \"scaler_fg\": scaler_fg,\n",
+    "        \"scaler_news\": scaler_news,\n",
+    "        \"scaler_y\": scaler_y,\n",
+    "    },\n",
+    "    benchmark_asset=\"SPY\",\n",
+    "    show_plot=True,\n",
+    "    show_tearsheet=True,\n",
+    ")\n",
+    "\n",
+    "# Save results\n",
+    "pd.DataFrame(backtest_results).to_csv(\"results/backtest_results.csv.gz\", index=False, compression=\"gzip\")\n",
+    "\n",
+    "print(\"Backtesting complete. Results saved to backtest_results.csv.gz.\")"
    ]
   }
  ],
